tests/expectations/parser/expression/literal/underscore_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | ______________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________________1i8
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | ___1_2i8
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _________________i32
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _123456i64
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _9012i128
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _3_4_5u8
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _4u16
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _5678u32
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _123456u64
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _345678901234567890123456789012i128
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | __737780287377___________80287377802873778028737780287377802873778028737______78028737780287377802873778028737780287____37780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802873778028737780287377802field
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | ___4940549scalar
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | __9__3756___17group
     | ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:2
     |
   1 | (_1___2__3,-4_5__6)group
     |  ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:3
     |
   1 | (-__12___3,456__)group
     |   ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:3
     |
   1 | (-_12__3,_45______6)group
     |   ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test:1:1
     |
   1 | _023group
     | ^""",
]
